docs/api/qiskit/2.3/qiskit.circuit.library.zz_feature_map.mdx
---
title: zz_feature_map (v2.3)
description: API reference for qiskit.circuit.library.zz_feature_map in qiskit v2.3
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.circuit.library.zz_feature_map
---

<span id="qiskit-circuit-library-zz-feature-map" />

# qiskit.circuit.library.zz\_feature\_map

<Function id="qiskit.circuit.library.zz_feature_map" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/circuit/library/data_preparation/pauli_feature_map.py#L291-L383" signature="qiskit.circuit.library.zz_feature_map(feature_dimension, reps=2, entanglement='full', alpha=2.0, data_map_func=None, parameter_prefix='x', insert_barriers=False, name='ZZFeatureMap')">
  Second-order Pauli-Z evolution circuit.

  For 3 qubits and 1 repetition and linear entanglement the circuit is represented by:

  ```text
  ┌───┐┌────────────────┐
  ┤ H ├┤ P(2.0*φ(x[0])) ├──■───────────────────────────■───────────────────────────────────
  ├───┤├────────────────┤┌─┴─┐┌─────────────────────┐┌─┴─┐
  ┤ H ├┤ P(2.0*φ(x[1])) ├┤ X ├┤ P(2.0*φ(x[0],x[1])) ├┤ X ├──■───────────────────────────■──
  ├───┤├────────────────┤└───┘└─────────────────────┘└───┘┌─┴─┐┌─────────────────────┐┌─┴─┐
  ┤ H ├┤ P(2.0*φ(x[2])) ├─────────────────────────────────┤ X ├┤ P(2.0*φ(x[1],x[2])) ├┤ X ├
  └───┘└────────────────┘                                 └───┘└─────────────────────┘└───┘
  ```

  Here, $\varphi$ is a classical non-linear function, which defaults to $\varphi(x) = x$ if $|S| = 1$ and $\varphi(x,y) = (\pi - x)(\pi - y)$ if $|S| > 1$, and $S$ is the set of qubit indices describing the connections in the feature map. See the docstring of [`pauli_feature_map()`](qiskit.circuit.library.pauli_feature_map "qiskit.circuit.library.pauli_feature_map") for more detail.

  **Parameters**

  *   **feature\_dimension** ([*int*](https://docs.python.org/3/library/functions.html#int)) – Number of qubits in the circuit.
  *   **reps** ([*int*](https://docs.python.org/3/library/functions.html#int)) – The number of times the evolution layers are repeated.
  *   **entanglement** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)  *|*[*Sequence*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Sequence)*\[*[*Sequence*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Sequence)*\[*[*int*](https://docs.python.org/3/library/functions.html#int)*]] |* [*Callable*](https://docs.python.org/3/library/typing.html#typing.Callable)*\[\[*[*int*](https://docs.python.org/3/library/functions.html#int)*],* [*str*](https://docs.python.org/3/library/stdtypes.html#str)  *|*[*Sequence*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Sequence)*\[*[*Sequence*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Sequence)*\[*[*int*](https://docs.python.org/3/library/functions.html#int)*]]]*) – Specifies the entanglement structure. Can be a string (`'full'`, `'linear'`, `'reverse_linear'`, `'circular'` or `'sca'`), a list of integer-tuples, or a callable returning these types for each repetition.
  *   **alpha** ([*float*](https://docs.python.org/3/library/functions.html#float)) – The Pauli rotation factor, multiplicative to the pauli rotations.
  *   **data\_map\_func** ([*Callable*](https://docs.python.org/3/library/typing.html#typing.Callable)*\[\[*[*Parameter*](qiskit.circuit.Parameter "qiskit._accelerate.circuit.Parameter")*],* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit._accelerate.circuit.ParameterExpression")*] | None*) – A mapping function for the data `x` which can be supplied to override the default mapping.
  *   **parameter\_prefix** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)) – The prefix used if default parameters are generated.
  *   **insert\_barriers** ([*bool*](https://docs.python.org/3/library/functions.html#bool)) – If `True`, barriers are inserted in between the evolution instructions and Hadamard layers.
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str)) – The name of the circuit.

  **Returns**

  A quantum circuit implementing the ZZ feature map.

  **Return type**

  [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")

  **Examples**

  ```python
  >>> from qiskit.circuit.library import zz_feature_map
  >>> prep = zz_feature_map(2, reps=1)
  >>> print(prep)
       ┌───┐┌─────────────┐
  q_0: ┤ H ├┤ P(2.0*x[0]) ├──■──────────────────────────────────────■──
       ├───┤├─────────────┤┌─┴─┐┌────────────────────────────────┐┌─┴─┐
  q_1: ┤ H ├┤ P(2.0*x[1]) ├┤ X ├┤ P(2.0*(pi - x[0])*(pi - x[1])) ├┤ X ├
       └───┘└─────────────┘└───┘└────────────────────────────────┘└───┘
  ```

  ```python
  >>> from qiskit.circuit.library import efficient_su2
  >>> classifier = zz_feature_map(3).compose(efficient_su2(3))
  >>> classifier.num_parameters
  27
  >>> classifier.parameters  # 'x' for the data preparation, 'θ' for the SU2 parameters
  ParameterView([
      ParameterVectorElement(x[0]), ParameterVectorElement(x[1]),
      ParameterVectorElement(x[2]), ParameterVectorElement(θ[0]),
      ParameterVectorElement(θ[1]), ParameterVectorElement(θ[2]),
      ParameterVectorElement(θ[3]), ParameterVectorElement(θ[4]),
      ParameterVectorElement(θ[5]), ParameterVectorElement(θ[6]),
      ParameterVectorElement(θ[7]), ParameterVectorElement(θ[8]),
      ParameterVectorElement(θ[9]), ParameterVectorElement(θ[10]),
      ParameterVectorElement(θ[11]), ParameterVectorElement(θ[12]),
      ParameterVectorElement(θ[13]), ParameterVectorElement(θ[14]),
      ParameterVectorElement(θ[15]), ParameterVectorElement(θ[16]),
      ParameterVectorElement(θ[17]), ParameterVectorElement(θ[18]),
      ParameterVectorElement(θ[19]), ParameterVectorElement(θ[20]),
      ParameterVectorElement(θ[21]), ParameterVectorElement(θ[22]),
      ParameterVectorElement(θ[23])
  ])
  ```
</Function>

